# wshowlyrics

./: .SRCINFO  .gitignore  .gitlab-ci.yml  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  LICENSE  PKGBUILD  README.ko.md  README.md  UNICODE_SUPPORT.md  _config.yml  config.c  config.h  index.html  lrc_parser.c  lrc_parser.h  lrclib_provider.c  lrclib_provider.h  lrcx_parser.c  lrcx_parser.h  lyrics_provider.c  lyrics_provider.h  main.c  main.h  meson.build  meson_options.txt  mpris.c  mpris.h  pango.c  pango.h  parser_utils.c  parser_utils.h  sample.txt  settings.ini.example  shell.nix  shm.c  sonar-project.properties  srt_parser.c  srt_parser.h  (+4 more)
.claude/: GITLAB_MIGRATION_ANALYSIS.md  TODO_CODE_QUALITY.md  TODO_COVERITY.md  TODO_OVERLAY_TOGGLE.md  TODO_PACKAGE_DISTRIBUTION.md  TODO_PVS_STUDIO.md  TODO_QODANA.md  TODO_SONARCLOUD.md  TODO_TRANSLATION_FALLBACK.md  TODO_TRANSLATION_FEATURES.md  sast_final_summary.md
.claude/agents/: aur-package-manager.md  high-level-code-refactorer.md  readme-multilingual-updater.md  refactor-analyzer.md
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: aur-publish.yml  aur-release.yml  build-packages.yml  ci.yml  copr-publish.yml  copr-release.yml  coverity-scan.yml  fuzz.yml  gitlab-mirror.yml  nur-publish.yml  nur-release.yml  ppa-release.yml  release.yml  security.yml
.gitlab/actions/: build.yml  package.yml  publish.yml  security.yml
_includes/: footer.html  head.html  header.html
_layouts/: default.html
assets/css/: style.css
assets/js/: main.js
docs/: FEATURES.md  README.ko.md  TESTING.md  add_furigana.py  furigana-shell.nix  help.txt
fuzz/: fuzz_lrc.c  fuzz_lrcx.c  fuzz_srt.c  fuzz_url_decode.c
fuzz/corpus/lrc/: basic.lrc  edge.lrc  metadata.lrc  ruby.lrc
fuzz/corpus/lrcx/: basic.lrcx  ruby.lrcx  unfill.lrcx
fuzz/corpus/srt/: basic.srt  edge.srt  vtt.srt
fuzz/corpus/url_decode/: abc.txt  korean.txt  malformed.txt  nul.txt  plain.txt  spaces.txt
protocols/: meson.build
src/: constants.h  lyrics_types.h  main.c  main.h
src/config/: config.c  config.h
src/core/rendering/: rendering_manager.c  rendering_manager.h
src/core/state/: state_helpers.c  state_helpers.h
src/curl_utils/: curl_utils.c  curl_utils.h
src/events/: wayland_events.c  wayland_events.h
src/file_utils/: file_utils.c
src/lrc_parser/: lrc_parser.c  lrc_parser.h
src/lrclib_provider/: lrclib_provider.c  lrclib_provider.h
src/lrcx_parser/: lrcx_parser.c  lrcx_parser.h
src/lyrics/: lyrics_manager.c  lyrics_manager.h
src/lyrics_provider/: lyrics_provider.c  lyrics_provider.h
src/lyrics_types/: lyrics_types.h
src/monitor/: file_monitor.c  file_monitor.h
src/mpris/: mpris.c  mpris.h
src/pango/: pango_utils.c  pango_utils.h
src/parser/lrc/: lrc_common.c  lrc_common.h  lrc_parser.c  lrc_parser.h  lrcx_parser.c  lrcx_parser.h
src/parser/lrcx/: lrcx_parser.c  lrcx_parser.h
src/parser/srt/: srt_parser.c  srt_parser.h
src/parser/utils/: parser_utils.c  parser_utils.h
src/parser_utils/: parser_utils.c  parser_utils.h
src/provider/itunes/: itunes_artwork.c  itunes_artwork.h
src/provider/lrclib/: lrclib_provider.c  lrclib_provider.h
src/provider/lyrics/: lyrics_provider.c  lyrics_provider.h
src/render_helpers/: render_helpers.c  render_helpers.h
src/shm/: shm.c  shm.h
src/srt_parser/: srt_parser.c  srt_parser.h
src/system_tray/: system_tray.c
src/translator/claude/: claude_translator.c  claude_translator.h
src/translator/common/: translator_common.c  translator_common.h
src/translator/deepl/: deepl_translator.c  deepl_translator.h
src/translator/gemini/: gemini_translator.c  gemini_translator.h
src/translator/openai/: openai_translator.c  openai_translator.h
src/user_experience/config/: config.c  config.h
src/user_experience/system_tray/: system_tray.c  system_tray.h
src/utils/curl/: curl_utils.c  curl_utils.h
src/utils/dbus_control/: dbus_control.c  dbus_control.h
src/utils/file/: file_utils.c  file_utils.h
src/utils/icon/: icon_utils.c  icon_utils.h
src/utils/json/: json_utils.c  json_utils.h
src/utils/lang_detect/: lang_detect.c  lang_detect.h
src/utils/lock/: lock_file.c  lock_file.h
src/utils/mpris/: mpris.c  mpris.h
src/utils/pango/: pango_utils.c  pango_utils.h
src/utils/render/: render_common.c  render_common.h  render_helpers.c  render_helpers.h  render_params.h  ruby_render.c  ruby_render.h  word_render.c  word_render.h
src/utils/runtime/: runtime_dir.c  runtime_dir.h
src/utils/shm/: shm.c  shm.h
src/utils/string/: string_utils.c  string_utils.h
src/utils/url/: url_utils.c  url_utils.h
src/utils/wayland/: wayland_init.c  wayland_init.h  wayland_manager.c  wayland_manager.h
src/wayland_manager/: wayland_manager.c  wayland_manager.h
tools/: add_furigana.py  add_furigana_ai.py  convert_vtt_to_srt.py  furigana-shell.nix
